<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/inspectImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="104dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/resultImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pass"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottomBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginBottom="22dp"
        android:text="@string/inspect"
        android:textSize="20sp"
        android:textStyle="bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="#28B2FF"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reportBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginBottom="22dp"
        android:text="@string/report"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="#42CF48"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/retryBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retryBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginBottom="22dp"
        android:text="@string/retry"
        android:textSize="20sp"
        android:textStyle="bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:visibility="gone"
        app:backgroundTint="#28B2FF"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reportBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>